[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid-vault-exporter"
version = "0.1.0"
description = "Read-only exporter: turn a Lucid (Lucidchart/Lucidspark) account into a local Obsidian-ready vault."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "GoldTech MX", email = "" }]
keywords = ["lucidchart", "lucidspark", "obsidian", "export", "backup", "migration"]

dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.45"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
dev = [
    "pytest>=8.2",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
lucid-vault-exporter = "lucid_vault_exporter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lucid_vault_exporter"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/lucid_vault_exporter/web.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]
